--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -234,3 +234,41 @@ select {
     text-align: center;
     text-decoration: none;
 }
+
+/* ペジネーション */
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100%;
+}
+
+.page-link {
+    position: relative;
+    display: block;
+    padding: 0.5rem 0.75rem;
+    margin-left: -1px;
+    line-height: 1.25;
+    color: #82756a;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    text-decoration: none;
+}
+
+.page-link:hover {
+    z-index: 2;
+    color: #d9c6b5;
+    text-decoration: none;
+    background-color: #e9ecef;
+    border-color: #dee2e6;
+}
+
+.page-item {
+    list-style: none;
+}
+
+.page-item.active .page-link {
+    z-index: 1;
+    color: #fff;
+    background-color: #82756a;
+    border-color: #82756a;
+}
