ページネーションを修正

--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -78,3 +78,32 @@ input::placeholder {
 }
 
 /* ページネーション */
+.pagination {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.pagination li:not(.active) {
+    border: 1px solid #e0dfde;
+    padding: 4px 12px;
+}
+
+.pagination li:not(:last-child) {
+    border-right: none;
+}
+
+.pagination a {
+    color: #8b7969;
+}
+
+.pagination__link {
+    text-decoration: none;
+}
+
+.active {
+    padding: 4px 12px;
+    border: 1px solid #8b7969;
+    background-color: #8b7969;
+    color: #fff;
+}
